--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "sharp": "^0.30.7"
   }
 }
