--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/IDRISSHACKER/guihon-cdn#readme",
   "dependencies": {
+    "@supercharge/strings": "^1.28.0",
     "body-parser": "^1.20.0",
+    "connect-busboy": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "http-auth": "^4.1.9",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
     "sharp": "^0.30.7"
