--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "http-auth": "^4.1.9",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sharp": "^0.30.7"
   }
 }
